[package]
name = "kasten"
version = "0.1.0"
authors = ["Simeon"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.1"
chrono = "0.4"
rand = "0.8"
rocket = "0.4.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sled = "0.34"
tera = "1.5.0"

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["serve", "tera_templates"]

[workspace]
members = ["bonbon"]
